US18 : add PMD + bugFixe (user update login/email)